Updated style for figcaption - issue with overlapped text above

--- a/wp-content/themes/theagsc/less/style-text.less
+++ b/wp-content/themes/theagsc/less/style-text.less
@@ -62,10 +62,10 @@ figcaption p, figcaption {
 	font-family: @brandon;
 	font-size: 1em;
 }
-p + figcaption {margin-bottom: 60px}
+p + figcaption {margin-bottom: 60px; margin-top: 0px;}
 
 figcaption img {
-	padding-top: 80px;
+	padding-top: 60px;
 	padding-bottom: 60px;
 	margin: 0 auto;
 }
